Add reading CSV File Using Pandas

--- a/25_Day_Pandas/pandas.ipynb
+++ b/25_Day_Pandas/pandas.ipynb
@@ -334,6 +334,324 @@
     "df = pd.DataFrame(data)\n",
     "print(df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reading CSV file using Pandas\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Gender     Height      Weight\n",
+      "0       Male  73.847017  241.893563\n",
+      "1       Male  68.781904  162.310473\n",
+      "2       Male  74.110105  212.740856\n",
+      "3       Male  71.730978  220.042470\n",
+      "4       Male  69.881796  206.349801\n",
+      "...      ...        ...         ...\n",
+      "9995  Female  66.172652  136.777454\n",
+      "9996  Female  67.067155  170.867906\n",
+      "9997  Female  63.867992  128.475319\n",
+      "9998  Female  69.034243  163.852461\n",
+      "9999  Female  61.944246  113.649103\n",
+      "\n",
+      "[10000 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('../data/weight-height.csv')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Gender     Height      Weight\n",
+      "0   Male  73.847017  241.893563\n",
+      "1   Male  68.781904  162.310473\n",
+      "2   Male  74.110105  212.740856\n",
+      "3   Male  71.730978  220.042470\n",
+      "4   Male  69.881796  206.349801\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head()) # give five rows we can increase the number of rows by passing argument to the head() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us also explore the last recordings of the dataframe using the tail() methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Gender     Height      Weight\n",
+      "9995  Female  66.172652  136.777454\n",
+      "9996  Female  67.067155  170.867906\n",
+      "9997  Female  63.867992  128.475319\n",
+      "9998  Female  69.034243  163.852461\n",
+      "9999  Female  61.944246  113.649103\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.tail()) # tails give the last five rows, we can increase the rows by passing argument to tail method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see the csv file has three rows: Gender, Height and Weight. If the DataFrame would have a long rows, it would be hard to know all the columns. Therefore, we should use a method to know the colums. we do not know the number of rows. Let's use shape meathod."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape) # as you can see 10000 rows and three columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us get all the columns using columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Gender', 'Height', 'Weight'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let us get a specific column using the column key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       73.847017\n",
+      "1       68.781904\n",
+      "2       74.110105\n",
+      "3       71.730978\n",
+      "4       69.881796\n",
+      "          ...    \n",
+      "9995    66.172652\n",
+      "9996    67.067155\n",
+      "9997    63.867992\n",
+      "9998    69.034243\n",
+      "9999    61.944246\n",
+      "Name: Height, Length: 10000, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "heights = df['Height'] # this is now a series\n",
+    "print(heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       241.893563\n",
+      "1       162.310473\n",
+      "2       212.740856\n",
+      "3       220.042470\n",
+      "4       206.349801\n",
+      "           ...    \n",
+      "9995    136.777454\n",
+      "9996    170.867906\n",
+      "9997    128.475319\n",
+      "9998    163.852461\n",
+      "9999    113.649103\n",
+      "Name: Weight, Length: 10000, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = df['Weight'] # this is now a series\n",
+    "print(weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(heights) == len(weights))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The describe() method provides a descriptive statistical values of a dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    10000.000000\n",
+      "mean        66.367560\n",
+      "std          3.847528\n",
+      "min         54.263133\n",
+      "25%         63.505620\n",
+      "50%         66.318070\n",
+      "75%         69.174262\n",
+      "max         78.998742\n",
+      "Name: Height, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(heights.describe()) # give statisical information about height data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    10000.000000\n",
+      "mean       161.440357\n",
+      "std         32.108439\n",
+      "min         64.700127\n",
+      "25%        135.818051\n",
+      "50%        161.212928\n",
+      "75%        187.169525\n",
+      "max        269.989699\n",
+      "Name: Weight, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weights.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Height        Weight\n",
+      "count  10000.000000  10000.000000\n",
+      "mean      66.367560    161.440357\n",
+      "std        3.847528     32.108439\n",
+      "min       54.263133     64.700127\n",
+      "25%       63.505620    135.818051\n",
+      "50%       66.318070    161.212928\n",
+      "75%       69.174262    187.169525\n",
+      "max       78.998742    269.989699\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.describe())  # describe can also give statistical information from a dataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to describe(), the info() method also give information about the dataset."
+   ]
   }
  ],
  "metadata": {
